# hellocpp17

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-single-platform.yml
docker/: Dockerfile
src/: hello.cpp
